<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Generic text -->
    <string name="app_name">SMS-Biljett SL</string>
    <string name="created_by">"Den här appen utvecklades utav Billy Sjöberg"</string>
    <string name="action_info">Info</string>
    <string name="sl_phone_nr">0767201010</string>
    
    <!-- Dialog texts -->
    <string name="dialog_ok"> OK </string>
    <string name="dialog_empty_price">Ingen zon vald</string>
    <string name="markZone">Markera minst en zon du tänker resa inom</string>
    
    <!-- Text for detail field -->
    <string name="text_fullprice">Helt</string>
    <string name="text_code">Kod</string>
    <string name="text_price">Pris</string>
    <string name="text_code_caps">KOD</string>
    <string name="text_price_caps">PRIS</string>
    <string name="discount">Reducerat</string>
    <string name="create_sms">Förbered SMS</string>
    <string name="discount_type">Typ</string>
    <string name="zone_a">Zon A</string>
    <string name="zone_b">Zon B</string>
    <string name="zone_c">Zon C</string>
    <string name="zones">Zon(er)</string>
    <string name="discount_terms">Du som är under 20 år eller över 65 år har rätt till reducerat pris. Om du inte redan registrerat dig för att köpa SL-biljetter via SMS kan du enkelt göra det <a href="https://smsreg.me/Signup/SelectMerchant?shortCode=sl">HÄR</a>. Ditt telefonnummer kopieras automatiskt som ett urklipp, så att du enkelt kan klippa in det i sidans formulär.</string>
</resources>
